--- a/src/app/components/cookie-policy/cookie-policy.component.scss
+++ b/src/app/components/cookie-policy/cookie-policy.component.scss
@@ -7,24 +7,24 @@
   margin-top: -80px !important;
 }
 
-.text{
+.text {
   background-color: #00050B;
 }
 
-p,li{
+p,
+li {
   line-height: 30px;
   text-align: justify;
 }
 
-a{
+a {
   text-decoration: none;
   color: white;
 }
-img{
 
+img {
   max-width: 100%;
   width: 130px;
   cursor: default;
   padding-left: 15px;
-
 }
