--- a/src/app/components/tour/tour.component.html
+++ b/src/app/components/tour/tour.component.html
@@ -14,54 +14,111 @@
   </div>
 </div>
 
-
 <div class=" text-center bg-dark hero pb-5 px-5 pt-5">
-  <div class="row row-cols-1 row-cols-md-2 g-4 pb-5 justify-content-center ">
+  <div class="row row-cols-1 row-cols-md-2 g-4 pb-5 justify-content-center gutter ">
     <div class="col">
-      <div class="card">
-        <iframe id="evrFrame" width="100%" height="640" style="width: 100%; height: 640px; border: none; max-width: 100%;"  allowvr="yes" allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"  frameborder="0" src="https://webobook.com/public/64079c811b33b177b67de1d2,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&" ></iframe>
+      <div class="card pt-3">
+        <iframe id="evrFrame" width="100%" height="640"
+          style="width: 100%; height: 640px; border: none; max-width: 100%;" allowvr="yes"
+          allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"
+          frameborder="0"
+          src="https://webobook.com/public/64079c811b33b177b67de1d2,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&"></iframe>
         <div class="card-body">
           <h5 class="card-title text-white fw-bold ">La baia degli squali</h5>
-          <p class="card-text text-white">La baia degli squali, la grande vasca dedicata ai predatori del mare, che ospita, oltre a diverse specie di squalo provenienti da vari ambienti marini, altri pesci interessanti.</p>
-          <a href="https://webobook.com/public/64079c811b33b177b67de1d2,en"  target="_blank" class="btn btn-primary rounded-pill px-4">Entra</a>
+          <p class="card-text text-white">La baia degli squali, la grande vasca dedicata ai predatori del mare, che
+            ospita, oltre a diverse specie di squalo provenienti da vari ambienti marini, altri pesci interessanti.</p>
+          <a href="https://webobook.com/public/64079c811b33b177b67de1d2,en" target="_blank"
+            class="btn btn-primary rounded-pill px-4">Entra</a>
         </div>
       </div>
     </div>
+
     <div class="col">
-      <div class="card">
-        <iframe id="evrFrame" width="100%" height="640" style="width: 100%; height: 640px; border: none; max-width: 100%;"  allowvr="yes" allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"  frameborder="0" src="https://webobook.com/public/640856a645a63d6c531f5c72,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&" ></iframe>
+      <div class="card pt-3">
+        <iframe id="evrFrame" width="100%" height="640"
+          style="width: 100%; height: 640px; border: none; max-width: 100%;" allowvr="yes"
+          allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"
+          frameborder="0"
+          src="https://webobook.com/public/640856a645a63d6c531f5c72,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&"></iframe>
         <div class="card-body">
-          <h5 class="card-title text-white fw-bold ">Barriera corralina</h5>
-          <p class="card-text text-white">Le barriere coralline sono tra gli ecosistemi più ricchi di specie animali e vegetali al mondo e grazie ai coralli offre protezione a migliaia di pesci e molluschi.</p>
-          <a href="https://webobook.com/public/640856a645a63d6c531f5c72,en"  target="_blank" class="btn btn-primary rounded-pill px-4">Entra</a>
+          <h5 class="card-title text-white fw-bold ">Laguna corralina</h5>
+          <p class="card-text text-white">Le barriere coralline sono tra gli ecosistemi più ricchi di specie animali e
+            vegetali al mondo e grazie ai coralli offre protezione a migliaia di pesci e molluschi.</p>
+          <a href="https://webobook.com/public/640856a645a63d6c531f5c72,enn" target="_blank"
+            class="btn btn-primary rounded-pill px-4">Entra</a>
         </div>
       </div>
     </div>
+
     <div class="col">
-      <div class="card">
-        <iframe id="evrFrame" width="100%" height="640" style="width: 100%; height: 640px; border: none; max-width: 100%;"  allowvr="yes" allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"  frameborder="0" src="https://webobook.com/public/64281f30de04680f43792b92,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&" ></iframe>
+      <div class="card pt-5">
+        <iframe id="evrFrame" width="100%" height="640"
+          style="width: 100%; height: 640px; border: none; max-width: 100%;" allowvr="yes"
+          allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"
+          frameborder="0"
+          src="https://webobook.com/public/64281f30de04680f43792b92,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&"></iframe>
         <div class="card-body">
           <h5 class="card-title  text-white fw-bold">Il regno dei ghiacci</h5>
-          <p class="card-text text-white">La suggestiva scenografia con pareti laccate bianco a effetto ghiaccio accompagna i visitatori alla scoperta dell’inospitale continente antartico e delle aree subantartiche.</p>
-          <a href="https://webobook.com/public/64281f30de04680f43792b92,en"  target="_blank" class="btn btn-primary rounded-pill px-4">Entra</a>
-
+          <p class="card-text text-white">La suggestiva scenografia con pareti laccate bianco a effetto ghiaccio
+            accompagna i visitatori alla scoperta dell’inospitale continente antartico e delle aree subantartiche.</p>
+          <a href="https://webobook.com/public/64281f30de04680f43792b92,en" target="_blank"
+            class="btn btn-primary rounded-pill px-4">Entra</a>
         </div>
       </div>
     </div>
-    <div class="col">
-      <div class="card">
-        <img src="https://img.freepik.com/free-photo/aerial-view-business-team_53876-124515.jpg?w=1060&t=st=1680128104~exp=1680128704~hmac=1a1d82d6676d0213e9e01dddd9b8651403eb13c6be8adf429761d4eedaaa7a6e" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">Entra</a>
 
+    <div class="col">
+      <div class="card pt-5">
+        <iframe id="evrFrame" width="100%" height="640"
+          style="width: 100%; height: 640px; border: none; max-width: 100%;" allowvr="yes"
+          allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"
+          frameborder="0"
+          src="https://webobook.com/public/6430041fbe505200c6270162,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&"></iframe>
+        <div class="card-body">
+          <h5 class="card-title text-white fw-bold">Fiumi dell'Amazzonia</h5>
+          <p class="card-text text-white">Una maestosa vasca che ripropone un tratto dei tanti fiumi dell'Amazzonia, con
+            rocce, tronchi d'albero, piante acquatiche, diverse specie di pesci tropicali e i caimani nani.</p>
+          <a href="https://webobook.com/public/6430041fbe505200c6270162,en" target="_blank"
+            class="btn btn-primary rounded-pill px-4">Entra</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card pt-5">
+        <iframe id="evrFrame" width="100%" height="640"
+          style="width: 100%; height: 640px; border: none; max-width: 100%;" allowvr="yes"
+          allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"
+          frameborder="0"
+          src="https://webobook.com/public/642ff40f1d003a2af543f8b2,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&"></iframe>
+        <div class="card-body">
+          <h5 class="card-title text-white fw-bold">Parete rocciosa</h5>
+          <p class="card-text text-white">Nella semioscurità, compare l’imponente grotta delle murene, un vasca
+            cilindrica alta oltre 6 metri, avvolta da un allestimento che ricorda la sezione di una conchiglia.</p>
+          <a href="https://webobook.com/public/642ff40f1d003a2af543f8b2,en" target="_blank"
+            class="btn btn-primary rounded-pill px-4">Entra</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card pt-5">
+        <iframe id="evrFrame" width="100%" height="640"
+          style="width: 100%; height: 640px; border: none; max-width: 100%;" allowvr="yes"
+          allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"
+          frameborder="0"
+          src="https://webobook.com/public/642fde38cc1d0207620e5542,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&"></iframe>
+        <div class="card-body">
+          <h5 class="card-title text-white fw-bold">La danza delle meduse</h5>
+          <p class="card-text text-white">Una sala dove lasciarsi trasportare dal movimento fluttuante delle meduse, la
+            colonna sonora dedicata e una particolare illuminazione accompagna i visitatori in questa coinvolgente
+            esperienza.</p>
+          <a href="https://webobook.com/public/642fde38cc1d0207620e5542,en" target="_blank"
+            class="btn btn-primary rounded-pill px-4">Entra</a>
         </div>
       </div>
     </div>
   </div>
-
 </div>
-
 
 <app-footer></app-footer>
