--- a/src/app/components/all-cards/all-cards.component.html
+++ b/src/app/components/all-cards/all-cards.component.html
@@ -17,41 +17,39 @@
     <div class="table-responsive bg-light">
       <table class="table">
         <div class="wrapper table table-hover">
-        <thead>
-          <tr>
-            <th scope="col">Action</th>
-            <th scope="col">Immagine</th>
-            <th scope="col" class="nome1">Nome comune</th>
-            <th scope="col" class="nome2">Nome scientifico</th>
-            <th scope="col" class="habitat">Habitat</th>
-            <th scope="col" class="desc">Descrizione</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let card of cards | paginate: { itemsPerPage: 4, currentPage: p } ">
-            <td class="icons">
-              <a class="delete" title="Delete" data-toggle="tooltip" (click)="elimina(card.id)" ><i class="bi bi-trash3-fill ps-1 pe-1 text-danger"></i></a>
-              <a class="modify" title="Modify" data-toggle="tooltip" (click)="modifica(card.id)"><i class="bi bi-pencil-square ps-2 text-primary"></i></a>
-            </td>
-            <td><img [src]="card.immagine" class="avatar" alt="Avatar"></td>
-            <td>{{card.nome_comune}}</td>
-            <td>{{card.nome_scientifico}}</td>
-            <td>{{card.habitat}}</td>
-            <td>
-              <div class="text pe-1"> {{card.descrizione}}</div>
-            </td>
-
-          </tr>
-
-        </tbody>
-      </div>
+          <thead>
+            <tr>
+              <th scope="col">Action</th>
+              <th scope="col">Immagine</th>
+              <th scope="col" class="nome1">Nome comune</th>
+              <th scope="col" class="nome2">Nome scientifico</th>
+              <th scope="col" class="habitat">Habitat</th>
+              <th scope="col" class="desc">Descrizione</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let card of cards | paginate: { itemsPerPage: 4, currentPage: p } ">
+              <td class="icons">
+                <a class="delete" title="Delete" data-toggle="tooltip" (click)="elimina(card.id)"><i
+                    class="bi bi-trash3-fill ps-1 pe-1 text-danger"></i></a>
+                <a class="modify" title="Modify" data-toggle="tooltip" (click)="modifica(card.id)"><i
+                    class="bi bi-pencil-square ps-2 text-primary"></i></a>
+              </td>
+              <td><img [src]="card.immagine" class="avatar" alt="Avatar"></td>
+              <td>{{card.nome_comune}}</td>
+              <td>{{card.nome_scientifico}}</td>
+              <td>{{card.habitat}}</td>
+              <td>
+                <div class="text pe-1"> {{card.descrizione}}</div>
+              </td>
+            </tr>
+          </tbody>
+        </div>
       </table>
-      <pagination-controls class="pagination py-2 d-flex justify-content-end pe-5" (pageChange)="p = $event"></pagination-controls>
-
+      <pagination-controls class="pagination py-2 d-flex justify-content-end pe-5"
+        (pageChange)="p = $event"></pagination-controls>
     </div>
   </div>
-
-
 </div>
 
 <app-footer></app-footer>
