--- a/src/app/components/all-cards/all-cards.component.scss
+++ b/src/app/components/all-cards/all-cards.component.scss
@@ -1,4 +1,4 @@
-.container-fluid{
+.container-fluid {
   background-image: url("../../../assets/img/abisso.jpg");
   height: 100%;
   background-position: center;
@@ -8,12 +8,12 @@
   margin-bottom: -2px;
 }
 
-.table{
+.table {
   margin-bottom: 0;
   background-color: #fdfdfd;
 }
 
-.wrapper{
+.wrapper {
   margin-left: 20px;
   margin-right: 20px;
   background-color: #ffffff;
@@ -29,7 +29,7 @@ table.table .avatar {
   object-fit: cover;
 }
 
-.title{
+.title {
   padding-top: 120px;
   padding-bottom: 90px;
 }
@@ -59,7 +59,8 @@ table.table .avatar {
   margin-left: 10px;
 }
 
-.table-title .btn:hover, .table-title .btn:focus {
+.table-title .btn:hover,
+.table-title .btn:focus {
   color: #000000;
   background: #e4e4e4;
 }
@@ -75,50 +76,53 @@ table.table .avatar {
   margin-top: 2px;
 }
 
-table.table tr th, table.table tr td {
+table.table tr th,
+table.table tr td {
   border-color: #e9e9e9;
   padding: 20px 15px;
   vertical-align: middle;
 }
 
-#plus{
+#plus {
   color: orangered;
 }
 
-.bi{
+.bi {
   cursor: pointer;
   font-size: 22px;
 }
 
 td .text {
-  height: 78px!important;
-  overflow-y: scroll!important;
+  height: 78px !important;
+  overflow-y: scroll !important;
 }
 
-.nome1, .nome2, .habitat{
+.nome1,
+.nome2,
+.habitat {
   width: 165px;
 }
 
-.desc{
-  width: 380px!important;
+.desc {
+  width: 380px !important;
 }
 
-.icons{
-  padding-left: 5px!important;
-  padding-right: 5px!important;
+.icons {
+  padding-left: 5px !important;
+  padding-right: 5px !important;
 }
 
-.pagination{
+.pagination {
   color: rgb(131, 131, 131);
   background-color: #FDFDFD;
 }
 
-.pagination ::ng-deep .ngx-pagination .current{
+.pagination ::ng-deep .ngx-pagination .current {
   background-color: orangered;
   border-radius: 3px;
 }
 
-.pagination ::ng-deep .ngx-pagination a:hover{
+.pagination ::ng-deep .ngx-pagination a:hover {
   border-radius: 3px;
 }
 
@@ -133,19 +137,17 @@ td .text {
 
 ::-webkit-scrollbar-thumb {
   background-color: #BEBEBE;
-
 }
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #aaaaaa;
 }
 
-@media screen and (min-width: 1400px){
-  .desc{
-    width: 605px!important;
+@media screen and (min-width: 1400px) {
+  .desc {
+    width: 605px !important;
   }
-  .wrapper{
-
+  .wrapper {
     width: 1250px;
   }
 }
