--- a/src/app/components/card-details/card-details.component.html
+++ b/src/app/components/card-details/card-details.component.html
@@ -1,19 +1,13 @@
 <div class="container-fluid">
-
   <div class="d-flex align-items-center justify-content-center py-5">
     <div class="card " style="max-width: 640px;">
       <img [src]="immagine">
       <div class="card-body px-4">
         <h5 class="card-title pt-2 fw-bold" id="title">Nome comune: {{nome_comune}}</h5>
-
         <h5 class="card-title pt-2 fst-italic fw-bold">Nome scientifico: {{nome_scientifico}}</h5>
-
         <p class="card-text pt-2 fw-medium">Habitat: {{habitat}}</p>
-
         <p class="card-text">{{descrizione}}</p>
-
-        <a href="http://localhost:4200/tour" class="btn btn-primary rounded-pill px-3" onclick="window.close()">
-          Indietro</a>
+        <a href="http://localhost:4200/tour" class="btn btn-primary rounded-pill px-3" onclick="window.close()">Indietro</a>
       </div>
     </div>
   </div>
