--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -1,72 +1,51 @@
 <div class="login-page">
-<div class="col-md-12">
-  <div class="card card-container">
-    <h2 class="text-center text-white display-6 pb-4">Login</h2>
-    <form
-      *ngIf="!isLoggedIn"
-      name="form"
-      (ngSubmit)="f.form.valid && onSubmit()"
-      #f="ngForm"
-      novalidate
-    >
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input
-          type="text"
-          class="form-control"
-          autocomplete="off"
-          name="username"
-          [(ngModel)]="form.username"
-          required
-          #username="ngModel"
-          [ngClass]="{ 'is-invalid': f.submitted && username.errors }"
-        />
-        <div *ngIf="username.errors && f.submitted" class="invalid-feedback">
-          Username obbligatorio
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          autocomplete="off"
-          name="password"
-          [(ngModel)]="form.password"
-          required
-          minlength="6"
-          #password="ngModel"
-          [ngClass]="{ 'is-invalid': f.submitted && password.errors }"
-        />
-        <div *ngIf="password.errors && f.submitted" class="invalid-feedback">
-          <div *ngIf="password.errors['required']">Password obbligatoria</div>
-          <div *ngIf="password.errors['minlength']">
-            La password deve contere almeno 6 caratteri
+  <div class="col-md-12">
+    <div class="card card-container">
+      <h2 class="text-center text-white display-6 pb-4">Login</h2>
+
+      <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" class="form-control" autocomplete="off" name="username" [(ngModel)]="form.username"
+            required #username="ngModel" [ngClass]="{ 'is-invalid': f.submitted && username.errors }" />
+          <div *ngIf="username.errors && f.submitted" class="invalid-feedback">
+            Username obbligatorio
           </div>
         </div>
-      </div>
-      <div class="form-group d-flex justify-content-center mt-3">
-        <button class="btn btn-primary btn-block mt-3 rounded-pill px-5" routerLink="/tour">
-          Accedi
-        </button>
-      </div>
 
-      <div class="form-group d-flex justify-content-center text-white" id="register">
-        <a class="nav-link me-2 pt-4" routerLink="/register">Non sei registrato? Clicca qui</a>
-      </div>
-
-      <div class="form-group d-flex justify-content-center text-white" id="indietro">
-        <a class="nav-link me-2 pt-4 indietro" routerLink="/"><i class="bi bi-arrow-left-circle"></i> Indietro</a>
-      </div>
-
-      <div class="form-group">
-        <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger" role="alert" id="alert">
-          Login fallito: {{ errorMessage }}
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" autocomplete="off" name="password" [(ngModel)]="form.password"
+            required minlength="6" #password="ngModel" [ngClass]="{ 'is-invalid': f.submitted && password.errors }" />
+          <div *ngIf="password.errors && f.submitted" class="invalid-feedback">
+            <div *ngIf="password.errors['required']">Password obbligatoria</div>
+            <div *ngIf="password.errors['minlength']">
+              La password deve contere almeno 6 caratteri
+            </div>
+          </div>
         </div>
-      </div>
-    </form>
 
+        <div class="form-group d-flex justify-content-center mt-3">
+          <button class="btn btn-primary btn-block mt-3 rounded-pill px-5" routerLink="/tour">
+            Accedi
+          </button>
+        </div>
 
+        <div class="form-group d-flex justify-content-center text-white" id="register">
+          <a class="nav-link me-2 pt-4" routerLink="/register">Non sei registrato? Clicca qui</a>
+        </div>
+
+        <div class="form-group d-flex justify-content-center text-white" id="indietro">
+          <a class="nav-link me-2 pt-4 indietro" routerLink="/"><i class="bi bi-arrow-left-circle"></i> Indietro</a>
+        </div>
+
+        <div class="form-group">
+          <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger text-center" role="alert" id="alert">
+            Login fallito: <br> {{ errorMessage }}
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
-</div>
 </div>
