--- a/src/app/components/modifica-card/modifica-card.component.scss
+++ b/src/app/components/modifica-card/modifica-card.component.scss
@@ -1,4 +1,4 @@
-.body{
+.body {
   background-size: cover;
   background-position: center;
   margin-bottom: -2px;
@@ -7,9 +7,6 @@
   background-position: center;
   background-size: cover;
 }
-
-
-
 
 .form-box {
   max-width: 500px;
@@ -21,20 +18,22 @@
   margin-bottom: 150px;
 }
 
-h1, p {
+h1,
+p {
   text-align: center;
 }
 
-h1{
+h1 {
   font-weight: 500;
   color: orangered;
 }
 
-.form-box{
+.form-box {
   background-color: rgba(255, 255, 255, 0.87);
 }
 
-input, textarea {
+input,
+textarea {
   width: 100%;
 }
 
@@ -43,104 +42,100 @@ input:focus {
   border: none;
 }
 
-
-label{
+label {
   padding-bottom: 5px;
   padding-top: 15px;
   font-weight: bold;
   color: #00050B;
 }
 
-.btn{
+.btn {
   background-color: orangered;
   border: 1px solid orangered;
   font-weight: 600;
   opacity: 1;
-  }
+}
 
-  .btn:hover{
-    background-color: rgb(192, 51, 0);
-    border-color: rgb(192, 51, 0);
-  }
+.btn:hover {
+  background-color: rgb(192, 51, 0);
+  border-color: rgb(192, 51, 0);
+}
 
-  .form-control{
-    border-color: rgb(192, 192, 192);
-  }
+.form-control {
+  border-color: rgb(192, 192, 192);
+}
 
-  textarea{
-    border-color: rgb(192, 192, 192);
-  }
+textarea {
+  border-color: rgb(192, 192, 192);
+}
 
-  .form-control.is-invalid{
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23ff4500'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23ff4500' stroke='none'/%3e%3c/svg%3e");
-    border-color: orangered!important;
-  }
+.form-control.is-invalid {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23ff4500'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23ff4500' stroke='none'/%3e%3c/svg%3e");
+  border-color: orangered !important;
+}
 
-  .invalid-feedback {
-    background-color: none;
-    border-radius: 5px;
-    color: rgb(255, 69, 0);
-    font-size: 16px;
-    font-weight: 600;
-    padding: 5px ;
-    }
+.invalid-feedback {
+  background-color: none;
+  border-radius: 5px;
+  color: rgb(255, 69, 0);
+  font-size: 16px;
+  font-weight: 600;
+  padding: 5px;
+}
 
-    .form-control:focus{
-      border-color: #FF0000;
-      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 69, 0);
-    }
+.form-control:focus {
+  border-color: #FF0000;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 69, 0);
+}
 
-    textarea.form-control:focus{
-      border-color: none!important  ;
-      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 69, 0);
-    }
+textarea.form-control:focus {
+  border-color: none !important;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 69, 0);
+}
 
+.alert {
+  color: #00050B !important;
+  background-color: transparent !important;
+  font-size: 18px;
+}
 
-    .alert{
-      color: #00050B!important;
-      background-color: transparent!important;
-      font-size: 18px;
-    }
+.alert-success {
+  background-color: transparent !important;
+  border: none !important;
+}
 
-    .alert-success{
-      background-color: transparent!important;
-      border: none!important;
-    }
+.btn {
+  background-color: orangered;
+  border: 1px solid orangered;
+  font-weight: 600;
+  opacity: 1;
+}
 
-    .btn{
-      background-color: orangered;
-      border: 1px solid orangered;
-      font-weight: 600;
-      opacity: 1;
-      }
+.btn:hover {
+  background-color: rgb(192, 51, 0);
+  border-color: rgb(192, 51, 0);
+}
 
-      .btn:hover{
-        background-color: rgb(192, 51, 0);
-        border-color: rgb(192, 51, 0);
-      }
+.indietro {
+  background-color: transparent;
+  border: none !important;
+  color: orangered;
+  font-size: 18px;
+}
 
-      .indietro{
-        background-color: transparent;
-        border: none!important;
-        color: orangered;
-        font-size: 18px;
+.indietro:hover {
+  text-decoration: underline;
+  background-color: transparent;
+  border-color: transparent;
+  font-weight: bolder;
+  transition: 0.1s;
+  color: orangered !important;
+}
 
-      }
-
-      .indietro:hover{
-        text-decoration: underline;
-        background-color: transparent;
-        border-color: transparent;
-        font-weight: bolder;
-        transition: 0.1s;
-        color: orangered!important;
-
-      }
-
-      .alert{
-        color: rgb(0, 0, 0)!important;
-        font-weight: bold;
-        padding: 10px;
-        border: 1px solid orangered;
-        font-size: 16px;
-      }
+.alert {
+  color: rgb(0, 0, 0) !important;
+  font-weight: bold;
+  padding: 10px;
+  border: 1px solid orangered;
+  font-size: 16px;
+}
