--- a/src/app/components/register/register/register.component.html
+++ b/src/app/components/register/register/register.component.html
@@ -1,8 +1,8 @@
 <div class="col-md-12 register ">
   <div class="card card-container">
     <h2 class="text-center text-white display-6 pb-4">Registrati</h2>
-    <form *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
 
+    <form *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
 
       <div class="d-flex justify-content-between" id="nomecognomne">
         <div class="form-group">
@@ -19,7 +19,6 @@
             </div>
           </div>
         </div>
-
 
         <div class="form-group">
           <label for="cognome">Cognome</label>
@@ -38,7 +37,6 @@
         </div>
       </div>
 
-
       <div class="form-group">
         <label for="username">Username</label>
         <input type="text" class="form-control" autocomplete="off" name="username" [(ngModel)]="form.username" required
@@ -55,7 +53,6 @@
         </div>
       </div>
 
-
       <div class="form-group">
         <label for="email">Email</label>
         <input type="email" class="form-control" autocomplete="off" name="email" [(ngModel)]="form.email" required email
@@ -68,12 +65,10 @@
         </div>
       </div>
 
-
       <div class="form-group">
         <label for="password">Password</label>
         <input type="password" class="form-control" autocomplete="off" name="password" [(ngModel)]="form.password"
           required minlength="6" #password="ngModel" [ngClass]="{ 'is-invalid': f.submitted && password.errors }" />
-
         <div class="invalid-feedback" *ngIf="password.errors && f.submitted">
           <div *ngIf="password.errors['required']">Password obbligatoria</div>
           <div *ngIf="password.errors['minlength']">
@@ -81,7 +76,6 @@
           </div>
         </div>
       </div>
-
 
       <div class="col-sm-12 mb-2 mt-4 d-flex justify-content-center">
         <re-captcha id="recaptcha" name="recaptcha" #recaptcha="ngModel" [(ngModel)]="token" required
@@ -96,9 +90,8 @@
       </div>
 
       <div class="alert alert-danger mt-3 text-center fw-bold" *ngIf="f.submitted && isSignUpFailed">
-        Registrazione fallita!<br />{{ errorMessage }}
+        Registrazione fallita.<br />{{ errorMessage }}
       </div>
-
 
       <div class="form-group d-flex justify-content-center text-white" id="register">
         <a class="nav-link me-2 pt-4" routerLink="/login">Sei già registrato? Clicca qui</a>
@@ -107,7 +100,6 @@
       <div class="form-group d-flex justify-content-center text-white" id="indietro">
         <a class="nav-link me-2 pt-4 indietro" routerLink="/"><i class="bi bi-arrow-left-circle"></i> Indietro</a>
       </div>
-
 
     </form>
 
