--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,7 +6,7 @@
         <div class="row text-center d-flex justify-content-center pt-5">
           <div class="col-md-2">
             <h6 class="text-uppercase">
-              <a class="text-white" routerLink="/">home</a>
+              <a  class="text-white"  (click)="scrollToTop()" routerLink="/">home</a>
             </h6>
           </div>
           <div class="col-md-2">
@@ -16,12 +16,12 @@
           </div>
           <div class="col-md-2">
             <h6 class="text-uppercase">
-              <a class="text-white" routerLink="/tour">tour virtuale</a>
+              <a class="text-white" (click)="scrollToTop()" routerLink="/tour">tour virtuale</a>
             </h6>
           </div>
           <div class="col-md-2">
             <h6 class="text-uppercase">
-              <a class="text-white" routerLink="/contatti">contatti</a>
+              <a class="text-white" (click)="scrollToTop()" routerLink="/contatti">contatti</a>
             </h6>
           </div>
           <div class="col-md-2">
