--- a/src/app/components/cookie-policy/cookie-policy.component.html
+++ b/src/app/components/cookie-policy/cookie-policy.component.html
@@ -203,8 +203,6 @@
 
     <p class="fw-bold">3. Tipologia di cookie utilizzati dal Sito</p>
     <p>Il Sito utilizza i seguenti cookie:</p>
-    <br>
-    <br>
     <p>
       <span class="fw-bold"> Cookie tecnici di sessione. </span>Tali cookie sono necessari al corretto funzionamento del
       Sito e consentono una navigazione efficiente e sicura. I cookie di sessione non vengono memorizzati in modo
@@ -212,7 +210,7 @@
       sessione non richiede il consenso dell’utente.
       <br>
       <br>
-      <span class="fw-bold"> Cookie di terze parti </span>Tali cookie sono inviati da siti gestiti da terze parti, che
+      <span class="fw-bold"> Cookie di terze parti. </span>Tali cookie sono inviati da siti gestiti da terze parti, che
       li raccolgono e utilizzano in piena autonomia. Di seguito, i cookie di terze parti operativi sul Sito e i link
       alle informative sulle relative modalità di gestione:
     </p>
